test/shadow.mlt
type t = { map : unit } [@@deriving fields]
[%%expect{|
Line _, characters 11-21:
Error: ppx_fields_conv: field name "map" conflicts with one of the generated functions
|}]
